--- a/node_bu/public/css/filters.css
+++ b/node_bu/public/css/filters.css
@@ -29,3 +29,9 @@
 select.is-invalid {
     animation: blink-red 2s ease-in-out; /* Adjusted for background color change */
 }
+
+.remove-filter-btn {
+    font-size: 16px; /* Increase font size */
+    padding: 10px 20px; /* Increase padding to make the button bigger */
+    margin-left: auto; /* Move the button to the right */
+}
