added table for statistic_weight and ratio

--- a/node_bu/public/css/filters.css
+++ b/node_bu/public/css/filters.css
@@ -29,3 +29,11 @@
 select.is-invalid {
     animation: blink-red 2s ease-in-out; /* Adjusted for background color change */
 }
+
+.list-group {
+    display: flex;
+}
+
+.list-group-item {
+    flex-grow: 1;
+}
