--- a/node_bu/public/css/filters.css
+++ b/node_bu/public/css/filters.css
@@ -37,3 +37,9 @@ select.is-invalid {
 .list-group-item {
     flex-grow: 1;
 }
+
+@media (max-width: 767px) {
+    .row > [class*="col-"] {
+        margin-bottom: 20px; /* Adds bottom margin for spacing */
+    }
+}
